--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@
 body{
     height: 100vh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    @include background-gradient(135deg,#de4c35,#c6c31c);
+    @include background-gradient(135deg,#a08cc1,#351892);
 }
 
 #popUpBox{
@@ -41,6 +41,7 @@ body{
        width: 100px;
        padding: 2px;
        border-radius: 20px;
+
        &:hover{
         cursor: pointer;
         -webkit-user-select: none;
@@ -50,6 +51,16 @@ body{
 }
 
 .main-container{
-    width: 400px;
-    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
+
+    .sub-container{
+        width: 200px;
+        height: 200px;
+        background-color: #ffffff;
+
+    }
 }
