--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ body {
   height: 100vh;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background: linear-gradient(135deg, #a08cc1, #351892);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #popUpBox {
@@ -23,6 +26,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 5;
   opacity: 0;
 }
 #popUpBox h2 {
@@ -48,14 +52,23 @@ body {
 }
 
 .main-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
   padding: 20px;
+  border-radius: 25px;
+  background-color: #ffffff;
+  padding: 20px;
+  display: flex;
+}
+.main-container #hangImageHolder {
+  margin: 0px 20px 0px 0px;
+}
+.main-container #hangImageHolder #hangImage {
+  width: 240px;
 }
 .main-container .sub-container {
-  width: 200px;
-  height: 200px;
-  background-color: #ffffff;
+  background-color: #DE4C35;
+  padding: 20px;
+  margin: 0px 0px 0px 20px;
+  border-radius: 25px;
+  color: #ffffff;
+  text-align: center;
 }
