--- a/css/style.scss
+++ b/css/style.scss
@@ -9,6 +9,9 @@ body{
     height: 100vh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     @include background-gradient(135deg,#a08cc1,#351892);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #popUpBox{
@@ -25,6 +28,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 5;
     opacity: 0;
 
     h2{
@@ -51,16 +55,26 @@ body{
 }
 
 .main-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
     padding: 20px;
+    border-radius: 25px;
+    background-color: #ffffff;
+    padding: 20px;
+    display: flex;
+
+    #hangImageHolder{
+        margin: 0px 20px 0px 0px;
+
+        #hangImage{
+            width: 240px;
+        }
+    }
 
     .sub-container{
-        width: 200px;
-        height: 200px;
-        background-color: #ffffff;
-
+        background-color: #DE4C35;
+        padding: 20px;
+        margin: 0px 0px 0px 20px;
+        border-radius: 25px;
+        color: #ffffff;
+        text-align: center;
     }
 }
