--- a/css/style.scss
+++ b/css/style.scss
@@ -76,5 +76,9 @@ body{
         border-radius: 25px;
         color: #ffffff;
         text-align: center;
+
+        p{
+            margin: 3px;
+        }
     }
 }
