--- a/css/style.scss
+++ b/css/style.scss
@@ -25,11 +25,8 @@ body{
     color: #ffffff;
     padding: 10px;
     border-radius: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     z-index: 5;
-    opacity: 0;
+    display: block;
 
     h2{
         margin: 5px;
@@ -42,7 +39,6 @@ body{
     }
     #playAgainButton{
        background-color: #DE4C35;
-       width: 100px;
        padding: 2px;
        border-radius: 20px;
 
@@ -76,9 +72,39 @@ body{
         border-radius: 25px;
         color: #ffffff;
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
         p{
             margin: 3px;
+        }
+        #keyBoardMap{
+            width: 250px;
+
+            ul{
+                padding: 0px;
+                margin: 0px;
+                list-style: none;
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+
+                li{
+                    background-color: #351892;
+                    padding: 3px;
+                    width: 20px;
+                    margin: 3px;
+                    border-radius: 5px;
+                    -webkit-user-select: none;
+                    user-select: none;
+                    cursor: pointer;
+                }
+            }
+            li:hover{
+                background-color: #506ED9;
+            }
+
         }
     }
 }
