--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
   padding: 10px;
   border-radius: 30px;
   z-index: 5;
-  display: block;
+  display: none;
 }
 #popUpBox h2 {
   margin: 5px;
@@ -90,12 +90,31 @@ body {
   padding: 3px;
   width: 20px;
   margin: 3px;
+  text-transform: uppercase;
   border-radius: 5px;
   -webkit-user-select: none;
   -moz-user-select: none;
        user-select: none;
   cursor: pointer;
 }
-.main-container .sub-container #keyBoardMap li:hover {
+.main-container .sub-container #keyBoardMap ul li:hover {
   background-color: #506ED9;
+}
+.main-container .sub-container #wordHolder {
+  display: flex;
+  gap: 10px;
+  list-style: none;
+  margin: 2px;
+}
+.main-container .sub-container #wordHolder .wordLetter {
+  width: 20px;
+  margin: 10px 0px 10px 0px;
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center;
+  border-bottom: 3px solid #ffffff;
+}
+.main-container .sub-container #wordHolder .letterFound {
+  border-color: transparent;
 }
