--- a/css/style.scss
+++ b/css/style.scss
@@ -26,7 +26,7 @@ body{
     padding: 10px;
     border-radius: 30px;
     z-index: 5;
-    display: block;
+    display: none;
 
     h2{
         margin: 5px;
@@ -95,16 +95,37 @@ body{
                     padding: 3px;
                     width: 20px;
                     margin: 3px;
+                    text-transform: uppercase;
                     border-radius: 5px;
                     -webkit-user-select: none;
                     user-select: none;
                     cursor: pointer;
+                    &:hover{
+                        background-color: #506ED9;
+                    }
                 }
             }
-            li:hover{
-                background-color: #506ED9;
+        }
+        
+        #wordHolder{
+            display: flex;
+            gap: 10px;
+            list-style: none;
+            margin: 2px;
+            
+            .wordLetter{
+                width: 20px;
+                margin: 10px 0px 10px 0px;
+                font-size: 1.5rem;
+                font-weight: 600;
+                text-transform: uppercase;
+                text-align: center;
+                border-bottom: 3px solid #ffffff;
             }
-
+            
+            .letterFound{
+                border-color: transparent;
+            }
         }
     }
 }
