--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,10 @@ body {
 .main-container .sub-container #keyBoardMap ul li:hover {
   background-color: #506ED9;
 }
+.main-container .sub-container #keyBoardMap ul .afterClick {
+  opacity: 0.5;
+  pointer-events: none;
+}
 .main-container .sub-container #wordHolder {
   display: flex;
   gap: 10px;
