--- a/css/style.css
+++ b/css/style.css
@@ -75,42 +75,46 @@ body {
   margin: 3px;
 }
 .main-container .sub-container #keyBoardMap {
-  width: 250px;
-}
-.main-container .sub-container #keyBoardMap ul {
+  width: 220px;
   padding: 0px;
-  margin: 0px;
+  margin: 5px 0px 0px 0px;
   list-style: none;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
-.main-container .sub-container #keyBoardMap ul li {
+.main-container .sub-container #keyBoardMap button {
   background-color: #351892;
   padding: 3px;
-  width: 20px;
+  width: 22px;
   margin: 3px;
   text-transform: uppercase;
   border-radius: 5px;
+  border: none;
+  color: #ffffff;
   -webkit-user-select: none;
   -moz-user-select: none;
        user-select: none;
   cursor: pointer;
 }
-.main-container .sub-container #keyBoardMap ul li:hover {
+.main-container .sub-container #keyBoardMap button:hover {
   background-color: #506ED9;
 }
-.main-container .sub-container #keyBoardMap ul .afterClick {
+.main-container .sub-container #keyBoardMap button[disabled] {
   opacity: 0.5;
   pointer-events: none;
 }
-.main-container .sub-container #wordHolder {
+.main-container .sub-container #keyBoardMap .afterClick {
+  opacity: 0.5;
+  pointer-events: none;
+}
+.main-container #wordHolder {
   display: flex;
   gap: 10px;
   list-style: none;
   margin: 2px;
 }
-.main-container .sub-container #wordHolder .wordLetter {
+.main-container #wordHolder .wordLetter {
   width: 20px;
   margin: 10px 0px 10px 0px;
   font-size: 1.5rem;
@@ -119,6 +123,6 @@ body {
   text-align: center;
   border-bottom: 3px solid #ffffff;
 }
-.main-container .sub-container #wordHolder .letterFound {
+.main-container #wordHolder .letterFound {
   border-color: transparent;
 }
