--- a/css/style.scss
+++ b/css/style.scss
@@ -80,28 +80,32 @@ body{
             margin: 3px;
         }
         #keyBoardMap{
-            width: 250px;
+            width: 220px;
+            padding: 0px;
+            margin: 5px 0px 0px 0px;
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
 
-            ul{
-                padding: 0px;
-                margin: 0px;
-                list-style: none;
-                display: flex;
-                justify-content: center;
-                flex-wrap: wrap;
-
-                li{
+                button{
                     background-color: #351892;
                     padding: 3px;
-                    width: 20px;
+                    width: 22px;
                     margin: 3px;
                     text-transform: uppercase;
                     border-radius: 5px;
+                    border: none;
+                    color: #ffffff;
                     -webkit-user-select: none;
                     user-select: none;
                     cursor: pointer;
                     &:hover{
                         background-color: #506ED9;
+                    }
+                    &[disabled]{
+                        opacity: 0.5;
+                        pointer-events: none;
                     }
                 }
                 .afterClick{
@@ -131,5 +135,4 @@ body{
                 border-color: transparent;
             }
         }
-    }
 }
